Service Mesh Lite/01-web/CPX_CIC_CExp.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
  labels:
    name: cpx-ingress
    app: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations: null
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-64.35" 
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/conf/
              name: cpx-volume1
            - mountPath: /cpx/crash/
              name: cpx-volume2
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.18.5"
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
          - --ingress-classes
            cpx1
          - --default-ssl-certificate
            default/default-secret
          imagePullPolicy: Always
        - name: exporter
          image: "quay.io/citrix/citrix-adc-metrics-exporter:1.4.6"
          args:
            - "--target-nsip=127.0.0.1"
            - "--port=8888"
            - "--secure=no"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data

      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume1
        emptyDir: {}
      - name: cpx-volume2
        emptyDir: {}
        
---

apiVersion: v1
kind: Service
metadata:
  name: cpx-service
  labels:
    app: cpx-service
    service-type: citrix-adc-monitor
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    name: http
  - port: 443
    protocol: TCP
    name: https
  - name: exporter-port
    port: 8888
  selector:
    app: cpx-ingress
