Service Mesh Lite/01-web/srv01_app01.yaml
apiVersion: v1
kind: Service
metadata:
  name: app01-service
spec:
  selector:
    app: app01-main
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
