Service Mesh Lite/01-web/ingress_vpx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   kubernetes.io/ingress.class: "citrixvpx"
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/lbvserver: '{"lbmethod":"ROUNDROBIN", "persistenceType":"COOKIEINSERT"}'
   ingress.citrix.com/monitor: '{"type":"ping"}'
   ingress.citrix.com/secure_backend: "false"
   ingress.citrix.com/frontend-ip: "10.0.1.7"
   ingress.citrix.com/preconfigured-certkey : '{"certs": [ {"name": "wild01"} ] }'
   ingress.citrix.com/frontend-sslprofile: '{"tls13":"enabled", "tls13sessionticketsperauthcontext":"1", "dhekeyexchangewithpsk":"yes"}'
   ingress.citrix.com/frontend-sslprofile: '{"hsts":"enabled", "maxage" : "157680000", "includesubdomain":"yes"}'

spec:
  tls:
  - secretName:
  rules:
  - host: app01.ms.local
    http:
      paths:
      - path: /main.html
        backend:
          serviceName: cpx-service
          servicePort: 80
